3) Please include your name with the changes you make.
4) Whenever making an update, please update this file, no matter how
small - this just lets others know that the file has changed if nothing
else.  With this, include the file(s) that you changed.
------------------------------------------------------------------------------
Changes for SVN:

Various fixes.
 server/c_misc.c: display information for weather even if turned off.
 server/commands.c: make 'archs' a wizard command.
Nicolas Weeger 2007-08-05

Use safe string functions. Removed unused parameters. Rename init_spells() to check_spells().
 common/recipe.c
 include/sproto.h
 server/init.c spell_effect.c spell_util.c
Nicolas Weeger 2007-08-05

Use safe string functions. Removed unused parameters.
 include/sproto.h
 server/skill_util.c skills.c
Nicolas Weeger 2007-08-05

Use safe string functions.
 common/living.c
 include/sproto.h
 server/c_misc.c skill_util.c
Nicolas Weeger 2007-08-05

Remove unused defines, functions and parameters.
 common/living.c
 include/commands.h map.h sproto.h
 server/c_misc.c c_party.c login.c player.c resurrection.c win32.c
 socket/request.c
Nicolas Weeger 2007-08-05

Remove unused parameter.
 include/sproto.h
 server/server.c
 test/unit/server/comet_perf.c
Nicolas Weeger 2007-08-05

Remove unused command_generate().
 include/sproto.h
 server/c_wiz.c
Nicolas Weeger 2007-08-05

include/config.h: fix default emergency path/coordinates.
Nicolas Weeger 2007-08-05

Merge NewServerCommands to ServerCommands, remove unused SocketCommands declaration.
 include/commands.h
 server/c_new.c commands.c
Nicolas Weeger 2007-08-05

Remove unused parameter from fire_bow().
 include/sproto.h
 server/monster.c player.c
Nicolas Weeger 2007-08-05

Remove unused parameter from fatal_signal(), make signal handlers static.
 include/sproto.h
 server/init.c
Nicolas Weeger 2007-08-05

Remove unused loading field.
 include/player.h
 server/c_wiz.c server.c
Nicolas Weeger 2007-08-05
